# ecsys

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: entity.hpp  registry.hpp  view.hpp
include/container/: sparse_set.hpp
include/ecsys/: registry.hpp
include/ecsys/container/: sparse_set.hpp
include/ecsys/util/: benchmark.hpp  concepts.hpp  types.hpp
include/util/: benchmark.hpp
scripts/: compile.sh  linter.sh
src/: CMakeLists.txt  benchmark.cpp  ecsys.cpp  registry.cpp
